--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,13 @@
-<h1><%= title %></h1>
-<p>Welcome to <%= title %></p>
+
+<div class="imagebackground" >
+   
+    <div class="title-box">
+    <h1><%= title  %></h1>
+    <a href="/movies" >Check the movies!</a>
+   </div>
+    
+    <!-- <img src="/images/cinema.jpg" alt=""> -->
+    
+</div>
+
+
