--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,55 @@
 body {
-  padding: 50px;
+  /* padding: 50px; */
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  
 }
 
 a {
   color: #00B7FF;
+}
+
+h1{
+font-size: 80px;
+}
+
+a{
+  margin-top:-20px ;
+  padding: 15px;
+  color: #00B7FF;
+  background-color: aliceblue;
+  border-radius: 30px;
+  text-decoration: none;
+  cursor:pointer;
+  text-align: center;
+}
+
+.title-box{
+margin-top: 120px;  
+width: 200px;  
+display: flex;
+flex-direction:column;
+color: aliceblue;
+}
+
+.imagebackground{
+  height: 800px;
+  margin-top: 0px;
+  background-image: url("/images/cinema.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content:center;
+}
+
+.movie{
+  height: 250px;
+  width: 200px;
+  background-color: aqua;
+  border:1px solid black;
+  margin: 30px;
+}
+
+#movie-container{
+  display: flex;
+  flex-wrap: wrap;
 }
